Redesign store as brand partner landing

--- a/index-store.html
+++ b/index-store.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Areum Store 혜화점 - 의류 대여</title>
+    <title>Areum Partners - 브랜드 입점 문의</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Pretendard:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -18,19 +18,9 @@
           scrollbar-width: none;
       }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
-  }
-}
-</script>
 <link rel="stylesheet" href="/index.css">
 </head>
-  <body class="bg-[#FDFBF7] text-stone-800 antialiased selection:bg-orange-200 selection:text-orange-900">
+  <body class="bg-[#1A1A1A] text-stone-100 antialiased selection:bg-[#C59A6D]/30 selection:text-[#D4AF37]">
     <div id="root"></div>
   <script type="module" src="/index-store.tsx"></script>
 </body>
